--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "uuid": "^13.0.0",
     "@google/genai": "^1.30.0",
     "buffer": "^6.0.3",
-    "jszip": "^3.10.1"
+    "jszip": "^3.10.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
